KFSPTS-19213 upgrade to the 8/27/20 version of financials (#1042)